Se crea el header de navagacion

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
-    <title>Document</title>
+    <title>Google clon</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul class="nav-right-section">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Imagenes</a></li>
+                <li class="menu-icon"><a href="#"></a></li>
+                <li><a href="#">
+                        <img src="https://lh3.googleusercontent.com/ogw/ADea4I5E8lGco5IGgIZbQN-Gr50jk7-3lIq-mBofPmdXUw=s32-c-mo" alt="">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        
+    </header>
+    <main>
+        <div></div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
