Se crea el main con los botones de navegacion

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#">Imagenes</a></li>
                 <li class="menu-icon"><a href="#"></a></li>
                 <li><a href="#">
-                        <img src="https://lh3.googleusercontent.com/ogw/ADea4I5E8lGco5IGgIZbQN-Gr50jk7-3lIq-mBofPmdXUw=s32-c-mo" alt="">
+                        <img src="https://i.pinimg.com/originals/71/3d/a0/713da0b73661cc192d935d9b38527b50.jpg" alt="Imagen colibri">
                     </a>
                 </li>
             </ul>
@@ -23,7 +23,25 @@
         
     </header>
     <main>
-        <div></div>
+        <section class="main-logo">
+            <img src="https://www.google.com/logos/doodles/2015/colombia-national-day-2015-6538261166030848-hp2x.jpg" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+
+                </span>
+                <input type="text"><a class ="micro-icon" href="#"></a>
+            </div>
+        </section>
+        <section class="main-button">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Me siento con suerte</button>
+            </div>
+        </section>
     </main>
     <footer>
 
